Fix footer overflowing the view on mobile

--- a/sass/base/elements/_fields.scss
+++ b/sass/base/elements/_fields.scss
@@ -53,4 +53,9 @@ textarea {
 
 .search-field {
 	height: 100%;
+	width: 100%;
+
+	@include tablet {
+		width: auto;
+	}
 }
