--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -163,12 +163,16 @@ a.scroll-down {
 	.entry-meta {
 		font-size: 1.2rem;
 		font-weight: 700;
+
+		display: flex;
+		flex-direction: column;
+		align-self: center;
 		
-		@include tablet {
+		/*@include tablet {
 			display: flex;
 			flex-direction: column;
 			align-self: center;
-		}
+		}*/
 	}
 
 	@include tablet {
